2003-04-03  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* fill-series.xml: Docs for the fill series tool.

2003-04-02  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* shuffling.xml: Docs for the shuffling tool.

2003-01-28  Jody Goldberg <jody@gnome.org>

	* Release 1.1.16

2002-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.1.15

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.14

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.13

2002-11-18  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* keybinding-appendix.xml: Consistently use `Ctrl' for Control, not
	`Ctl'.

2002-11-15  Jody Goldberg <jody@gnome.org>

	* Release 1.1.12

2002-11-01  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* Makefile.am: added keybinding-appendix.xml .
	* keybinding-appendix.xml: changed id to "keybindings" as "keybinding"
	  was already used by gnumeric.xml .

2002-11-01  Jody Goldberg <jody@gnome.org>

	* Release 1.1.11

2002-11-01  Kevin Breit  <mrproper@ximian.com>

	* gnumeric.xml: Fixed what things linked to.

	* keybinding-appendix.xml: Added to CVS.  This lists the keystrokes which aren't listed in the menus.

	* gnumeric.xml: Added a keybinding file.

2002-10-27  Jody Goldberg <jody@gnome.org>

	* Release 1.1.10

2002-09-27  J.H.M. Dassen (Ray) <jdassen@debian.org>
 
 	* gnumeric-C.omf: Corrected subject category so the docs show up in
 	yelp's help contents. 
 
2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9

2002-08-26  Jon K Hellan  <hellan@acm.org>

	* gnumeric-C.omf: Update format dtd and identifier url to match
	xml version of docs.

	* Makefile.am (entities): Comment out introduction.xml

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-07-31  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* simulation.xml: Initial version.

2002-07-29  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* analysis-tools.xml: Added info regarding std.errors in the
	exponential smoothing tool.
